--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -326,13 +326,12 @@ header  .headerLine {
 	        left: 0;
 	        background: rgba(0,0,0,0.8);
             cursor: pointer;
+            text-align: center;
             
             img {
-                max-width: 90%;
-	            max-height: 80%;
-	            margin-top: 2%;
-                width: 50%;
-                height: 50%;
+                max-height: 95%;
+                width: auto;
+                margin: 2% auto 3% auto;
             }
             
                
